--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,9 @@ color: var(--color-secondary-dark);
 background-color: var(--color-primary);
 }
 
-img {
+img, svg {
 display: block;
+max-width: 100%;
 }
 
 .header-first {
@@ -133,7 +134,6 @@ color: var(--color-background);
 position: relative;
 color: var(--color-background);
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .nav-link.current::after {
@@ -147,7 +147,6 @@ height: 4px;
 border-radius: 2px;
 background-color: var(--color-background);
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .address {
@@ -188,6 +187,11 @@ color: var(--color-background);
   cursor: pointer;
   margin-left: auto;
 }
+@media only screen and (min-width: 768px) {
+  .header-menu-button {
+    display: none;
+  }
+}
 p, h1, h2, h3, h4, h5, h6 {
 margin: 0;
 }
@@ -202,10 +206,11 @@ padding: 120px 0;
 }
 
 .hero-section {
-max-width: 1440px;
+/* max-width: 1440px; */
+max-width: 320px;
 background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
 rgba(46, 47, 66, 0.70)), 
-url('../images/portfolio/people-office.jpg');
+url('../images/bg/bg_mob.jpg');
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -213,6 +218,52 @@ flex-shrink: 0;
 padding: 188px 0;
 margin-left: auto;
 margin-right: auto;
+}
+
+/* Mobile screen */
+@media only screen and (min-resolution: 192dpi) {
+  .hero-section {
+    max-width: 768px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)), 
+    url('../images/bg/bg_mob@2x.jpg');  
+  }
+}
+
+/* Table screen */
+@media only screen and (min-width: 768px) {
+  .hero-section {
+    max-width: 768px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)), 
+    url('../images/bg/bg_tabl.jpg');  
+  }
+}
+@media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .hero-section {
+    max-width: 768px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)), 
+    url('../images/bg/bg_tabl@2x.jpg');  
+  }
+}
+
+/* Desctop screen */
+@media only screen and (min-width: 1200px) {
+  .hero-section {
+    max-width: 1200px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)), 
+    url('../images/bg/bg_desc.jpg');  
+  }
+}
+@media only screen and (min-width: 1200px) and (min-resolution: 192dpi) {
+  .hero-section {
+    max-width: 768px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)), 
+    url('../images/bg/bg_desc@2x.jpg');  
+  }
 }
 
 .hero-title {
@@ -522,6 +573,29 @@ position: relative;
 overflow: hidden;
 }
 
+.portfolio-img{
+margin: 0 auto;
+}
+@media screen and (min-width: 320px) {
+  .portfolio-img {
+    width: 288px;
+    height: 280px;
+    }
+}
+@media screen and (min-width: 768px) {
+  .portfolio-img {
+    width: 356px;
+    height: 300px;
+    }
+}
+@media screen and (min-width: 1158px) {
+  .portfolio-img {
+    width: 360px;
+    height: 300px;
+    }
+}
+
+
 .overlay {
 width: 100%;
 height: 100%;
@@ -568,6 +642,7 @@ text-decoration: none;
 text-transform: uppercase;
 margin-bottom: 16px;
 display: inline-block;
+justify-content: center;
 }
 
 .logo-footer .accent {
@@ -582,21 +657,49 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin-bottom: 72px;
+text-align: start;
 }
 
 .footer-logo-club {
-margin-right: 120px;
+/* margin-right: 120px; */
+text-align: center;
 }
-
+@media screen and (min-width: 768px) {
+  .footer-logo-club {
+    text-align: start;
+    }
+}
+@media screen and (min-width: 1158px) {
+  .footer-logo-club {
+    margin-right: 120px;
+    }
+}
 .footer-club {
-display: flex;
-align-items: baseline;
-   
+/* display: flex; */
+/* align-items: baseline; */  
+}
+@media screen and (min-width: 768px) {
+  .footer-club {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding-left: 108px;
+    padding-right: 108px;
+    }
+}
+@media screen and (min-width: 1158px) {
+  .footer-club {
+    align-items: baseline;
+    padding: 0 15px;
+    gap: 0;
+    }
 }
 .media {
 display: flex;
 gap: 16px;
 list-style-type: none;
+justify-content: center;
 }
 
 .social-media {
@@ -606,12 +709,19 @@ font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 margin-bottom: 16px;
+text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .social-media {
+    text-align: start;
+    }
 }
 
 
 .footer-social {
 width: 40px;
 height: 40px;
+margin-bottom: 72px;
 }
 
 .footer-social-link {
@@ -637,7 +747,12 @@ background-color: var(--color-backgraund-blue);
 fill: var(--color-secondary-light); 
 }
 .subscribe-club {
-padding-left: 80px;
+/* padding-left: 80px; */
+}
+@media screen and (min-width: 1158px) {
+  .subscribe-club {
+    padding-left: 80px;
+    }
 }
 .subscribe {
 margin-bottom: 16px;
@@ -646,11 +761,28 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--color-primary);
+text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .subscribe {
+    text-align: start;
+    }
+}
+
 .form-subscribe {
 display: flex;
+flex-wrap: wrap;
+justify-content: center;
 gap: 24px;
 }
+@media screen and (min-width: 768px) {
+  .form-subscribe {
+    flex-wrap: nowrap;
+    justify-content: start;
+    }
+}
+
+
 .subscribe-input {
 width: 264px;
 height: 40px;
@@ -719,14 +851,23 @@ pointer-events: none;
 position: absolute;
 top: 50%;
 left: 50%;
-width: 408px;
-min-height: 584px;
+/* width: 408px;
+min-height: 584px; */
+width: 288px;
+min-height: 623px;
 background-color: var(--color-background-light);
 border-radius: 4px;
 padding: 72px 24px 24px 24px;
 transform: translate(-50%,-50%);
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+}
 }
 .backdrop.is-hidden .modal {
 transform: scale(0);
@@ -904,12 +1045,12 @@ color: var(--color-secondary);
 
 
 .menu-container{
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  top: 0;
-  left: 0;
-  padding: 72px 16px 40px;
+position: fixed;
+display: flex;
+flex-direction: column;
+top: 0;
+left: 0;
+padding: 72px 16px 40px;
 width: 100%;
 height: 100%;
 background-color: var(--color-primary);
