--- a/css/styles.css
+++ b/css/styles.css
@@ -27,18 +27,9 @@ max-width: 100%;
 
 .header-first {
 display: flex;
-padding: 18px 0;
+/* padding: 18px 0; */
 }
-@media only screen and (min-width: 767.98px) {
-  .header-first {
-    padding: 16px 0 0;
-    }
-}
-@media only screen and (min-width: 1157.98px) {
-  .header-first {
-    padding: 0;
-    }
-}
+
 header {
 border-bottom: 1px solid var(--color-border-light);
 box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -61,13 +52,13 @@ padding: 0 16px;
 /* Table screen */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 732px;
+    max-width: 768px;
   
     } 
 }
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
     padding: 0 15px;
@@ -102,6 +93,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-container {
 display: flex;
+align-items: center;
 }
 .header-nav {
 display: flex;
@@ -194,11 +186,17 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media only screen and (min-width: 767.98px) {
   .address-link {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
     padding: 0;
   }
 }
 @media only screen and (min-width: 1157.98px) {
   .address-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     padding: 24px 0;
   }
 }
@@ -222,6 +220,7 @@ color: var(--color-background);
   background-color: var(--color-primary);
   cursor: pointer;
   margin-left: auto;
+  padding: 16px 0;
 }
 
 @media only screen and (min-width: 768px) {
@@ -302,17 +301,17 @@ margin-right: auto;
 }
 
 /* Desctop screen */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
   .hero-section {
-    max-width: 1200px;
+    max-width: 1158px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
     rgba(46, 47, 66, 0.70)), 
     url('../images/bg/bg_desc.jpg');  
   }
 }
-@media only screen and (min-width: 1200px) and (min-resolution: 192dpi) {
+@media only screen and (min-width: 1158px) and (min-resolution: 192dpi) {
   .hero-section {
-    max-width: 1200px;
+    max-width: 1158px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.70), 
     rgba(46, 47, 66, 0.70)), 
     url('../images/bg/bg_desc@2x.jpg');  
@@ -427,7 +426,7 @@ list-style-type: none;
 } 
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .advantage-list {
     gap:24px;
     }
@@ -444,7 +443,7 @@ list-style-type: none;
 } 
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .advantage-item {
     width: calc((100% - 72px) / 4);
     }
@@ -488,7 +487,7 @@ margin-bottom: 8px;
 } 
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .club-subtitle {
     text-align: none;
     font-size: 20px;
@@ -542,7 +541,7 @@ justify-content: center;
 } 
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .team-item {
     gap:24px;
     }
@@ -556,7 +555,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .team {
     flex-basis: calc((100% - 72px) / 4);
     }
@@ -623,9 +622,9 @@ row-gap: 48px;
 } 
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
   .portfolio-item {
-    gap:24px;
+    gap:48px 24px;
     }
 } 
 
@@ -643,7 +642,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 /* Desctop screen */
-@media screen and (min-width:1200px) {
+@media screen and (min-width:1158px) {
   .portfolio-cards {
     width: calc((100% - 48px) / 3);
     }
@@ -752,7 +751,7 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
-margin-bottom: 72px;
+/* margin-bottom: 72px; */
 text-align: start;
 }
 
@@ -782,14 +781,16 @@ text-align: center;
     }
 }
 .footer-club {
-/* display: flex; */
+display: flex;
+flex-direction: column;
+gap: 72px;
 /* align-items: baseline; */  
 }
 @media screen and (min-width: 768px) {
   .footer-club {
-    display: flex;
+    flex-direction: initial;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
     padding-left: 108px;
     padding-right: 108px;
     }
@@ -802,7 +803,7 @@ text-align: center;
     }
 }
 .media-icons {
-  margin-bottom: 72px; 
+  /* margin-bottom: 72px;  */
 }
 
 .media {
@@ -860,7 +861,7 @@ fill: var(--color-secondary-light);
 }
 @media screen and (min-width: 1158px) {
   .subscribe-club {
-    padding-left: 80px;
+    margin-left: 80px;
     }
 }
 .subscribe {
@@ -1210,6 +1211,7 @@ margin-bottom: 40px;
   }
 .mobile-contacts {
   list-style: none;
+  margin-bottom: 48px;
 }
 .mobile-contacts-link {
   color: var(--color-secondary-dark);
@@ -1222,3 +1224,38 @@ text-decoration: none;
 .mobile-contacts-link.current {
   color: var(--color-secondary);
 }
+
+.media1 {
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
+  justify-content: center;
+  }
+
+  .footer-social1 {
+  width: 40px;
+  height: 40px;
+  }
+  
+  .footer-social-link1 {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  border-radius: 50%;  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .footer-social-link1:hover {
+  background-color: var(--color-backgraund-blue);
+  }
+  
+  .footer-social-link1:focus {
+  background-color: var(--color-backgraund-blue);
+  }
+    
+  .footer-social-icon1 {
+  fill: var(--color-secondary-light); 
+  }
